--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "max-descriptions",
+  "name": "liana-descriptions",
   "version": "1.0.0",
   "description": "",
   "main": "server/index.js",
@@ -24,44 +24,44 @@
   },
   "homepage": "https://github.com/gektin/max-descriptions#readme",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "babel-jest": "^26.5.2",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.2.1",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-throw-expressions": "^7.12.13",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.12.13",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "html-webpack-plugin": "^4.5.0",
-    "jest": "^26.5.2",
-    "mini-css-extract-plugin": "^1.0.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "html-webpack-plugin": "^4.5.2",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
-    "react-test-renderer": "^16.13.1",
-    "sass-loader": "^10.0.3",
+    "nodemon": "^2.0.7",
+    "react-test-renderer": "^16.14.0",
+    "sass-loader": "^10.1.1",
     "sequelize-mock": "^0.10.2",
     "style-loader": "^2.0.0",
     "supertest": "^5.0.0",
-    "webpack": "^4.44.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
